; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/drivers/videoprt/extr_ddc.c_I2CRepStart.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/drivers/videoprt/extr_ddc.c_I2CRepStart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOW = common dso_local global i32 0, align 4
@HIGH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @I2CRepStart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @I2CRepStart(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @LOW, align 4
  %8 = call i32 @WRITE_SCL(i32 %7)
  %9 = call i32 (...) @DELAY_HALF()
  %10 = load i32, i32* @HIGH, align 4
  %11 = call i32 @WRITE_SDA(i32 %10)
  %12 = call i32 (...) @DELAY_HALF()
  %13 = load i32, i32* @HIGH, align 4
  %14 = call i32 @WRITE_SCL(i32 %13)
  %15 = call i32 (...) @DELAY_HALF()
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @I2CStart(i32 %16, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @WRITE_SCL(i32) #1

declare dso_local i32 @DELAY_HALF(...) #1

declare dso_local i32 @WRITE_SDA(i32) #1

declare dso_local i32 @I2CStart(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
